Refactor ProductRepositoryTest to use getFirst() for clarity in assertions